fix: add extra padding for content body on mobile

--- a/src/app/til/[slug]/page.module.css
+++ b/src/app/til/[slug]/page.module.css
@@ -166,6 +166,7 @@
 
     .content {
         font-size: 0.875rem;
+        padding: 0 0.5rem;
     }
 
     .content h2 {
